fspa-90 new customer add logic integration, view expand mode integrate

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 @import '../assets/styles/variables';
-@import '../../node_modules/angular2-data-table/src/components/datatable.scss';
-@import '../../node_modules/angular2-data-table/src/themes/material.scss';
+@import '../../node_modules/angular2-data-table/src/components/datatable';
+@import '../../node_modules/angular2-data-table/src/themes/material';
 
 html,
 body {
