--- a/src/app/forms/customer-form/customer-form.component.html
+++ b/src/app/forms/customer-form/customer-form.component.html
@@ -1,7 +1,7 @@
-<bd-form-expand [expanded]="isFormExpanded" (changed)="onExpandChange">
+<bd-form-expand [expanded]="isFormExpanded" (changed)="onExpandChanged($event)">
 	<form [formGroup]="customerForm">
-		<bd-form-section [labelText]="'CUSTOMER > BASIC INFORMATION'" [viewMode]='viewMode'>
-			<bd-input [labelText]="'Company Name'" formControlName="name" *ngIf="controlVisible('name')">
+		<bd-form-section [labelText]="'CUSTOMER > BASIC INFORMATION'" [isExpanded]='isFormExpanded'>
+			<bd-input [labelText]="'Company Name'" formControlName="name" *ngIf="isFormExpanded">
 			</bd-input>
 			<bd-dropdown [labelText]="'Customer type'" formControlName="customerType" [items]="customerTypes">
 			</bd-dropdown>
@@ -13,11 +13,11 @@
 				<bd-input [labelText]="'MC #'" formControlName="mc">
 				</bd-input>
 			</bd-validator>
-			<bd-input [labelText]="'Tax ID (W9)'" formControlName="taxId">
+			<bd-input [labelText]="'Tax ID (W9)'" formControlName="taxId" *ngIf="isFormExpanded">
 			</bd-input>
 		</bd-form-section>
-		<bd-form-section [labelText]="'CUSTOMER > ADDRESS'" [viewMode]='viewMode'>
-			<address-form [group]='customerForm.controls.address' [address]='customer.address'></address-form>
+		<bd-form-section [labelText]="'CUSTOMER > ADDRESS'" [isExpanded]='isFormExpanded'>
+			<address-form [group]='customerForm.controls.address' [isExpanded]="isFormExpanded" [address]='customer.address'></address-form>
 		</bd-form-section>
 		<div class="section btn-container" *ngIf="isEditMode">
 			<bd-button
