--- a/src/app/shared/components/bd-dropdown/bd-dropdown.component.html
+++ b/src/app/shared/components/bd-dropdown/bd-dropdown.component.html
@@ -32,7 +32,7 @@
       </li>
       <li *ngFor="let item of _items"
           attr.value="{{item}}"
-          (click)="_handleDropdownItemClick($event)">
+          (click)="_handleDropdownItemClick($event, item)">
           <div *ngIf="dropdownItemTemplate">
             <template
               [ngTemplateOutlet]="dropdownItemTemplate"
