FSPA-90 #comment added textarea to billing form, hide functionality to billing form

--- a/src/app/forms/customer-form/customer-form.component.scss
+++ b/src/app/forms/customer-form/customer-form.component.scss
@@ -20,7 +20,7 @@
 	margin-bottom: 0;
 	font-weight: normal;
 	padding-left: 15px;
-	min-height: 50px;
+	min-height: $form-control-height;
 	align-items: center;
 
 	input {
