--- a/src/app/forms/customer-form/customer-form.component.html
+++ b/src/app/forms/customer-form/customer-form.component.html
@@ -19,9 +19,12 @@
 		<bd-form-section [labelText]="'CUSTOMER > ADDRESS'" [isExpanded]='isFormExpanded'>
 			<address-form [group]='customerForm.controls.address' [isExpanded]="isFormExpanded" [address]='customer.address'></address-form>
 		</bd-form-section>
-		<bd-form-section [labelText]="'CUSTOMER > BILLING'" [isExpanded]="isFormExpanded">
+		<bd-form-section [labelText]="'CUSTOMER > BILLING'" *ngIf='isExpanded' [isExpanded]="isFormExpanded">
 		 <label class="same-as-company-label"><input type="checkbox" (change)="sameAsCompanyChange($event)"><span>Same as Company Address</span></label>
 		 <address-form [group]='customerForm.controls.billingAddresses' [address]='customer.billingAddresses'></address-form>
+		 <bd-textarea
+		 [labelText]="'Notes'">
+		 </bd-textarea>
 		</bd-form-section>
 		<div class="section btn-container" *ngIf="isEditMode">
 			<bd-button
