FSPA-90 #comment added email input to address form

--- a/src/app/forms/customer-form/customer-form.component.html
+++ b/src/app/forms/customer-form/customer-form.component.html
@@ -18,6 +18,8 @@
 		</bd-form-section>
 		<bd-form-section [labelText]="'CUSTOMER > ADDRESS'" [isExpanded]='isFormExpanded'>
 			<address-form [group]='customerForm.controls.address' [isExpanded]="isFormExpanded" [address]='customer.address'></address-form>
+			<bd-input [labelText]="'Email'" *ngIf='isExpanded'>
+			</bd-input>
 		</bd-form-section>
 		<bd-form-section [labelText]="'CUSTOMER > BILLING'" *ngIf='isExpanded' [isExpanded]="isFormExpanded">
 		 <label class="same-as-company-label"><input type="checkbox" (change)="sameAsCompanyChange($event)"><span>Same as Company Address</span></label>
