FSPA-88 #comment fix vertical align of dropdown label

--- a/src/app/shared/components/bd-dropdown/bd-dropdown.component.scss
+++ b/src/app/shared/components/bd-dropdown/bd-dropdown.component.scss
@@ -15,6 +15,7 @@
 		.bd-dropdown-label {
 			width: 80px;
 			color: $label-default-color;
+			line-height: $tiny-font-size;
 			text-align: right;
 			margin-right: 32px;
 
