--- a/src/app/shared/components/google-autocomplete/google-autocomplete.component.scss
+++ b/src/app/shared/components/google-autocomplete/google-autocomplete.component.scss
@@ -28,3 +28,27 @@ $hover-clor: #f5fefe;
 		font-size: 17px;
 	}
 }
+
+.item-wrapper {
+	display: flex;
+	height: 100%;
+	padding: 0 17px;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+
+	.left-panel {
+
+		.name {
+			color: #000;
+			font-size: 14px;
+		}
+	}
+
+	.right-panel {
+		.number {
+			color: #000;
+			font-size: 14px;
+		}
+	}
+}
