FSPA-134 #comment created requirements panel, get test data from load service, fixed lint err

--- a/src/app/forms/load-form/load-form.component.html
+++ b/src/app/forms/load-form/load-form.component.html
@@ -36,6 +36,18 @@
        </bd-typeahead>
      </bd-validator>
       <customer-form *ngIf='load.customer' [customer]='load.customer' [viewMode]="customerViewMode"> </customer-form>
+      <bd-form-section [isExpanded]='isFormExpanded'>
+        <bd-dropdown [labelText]="'Driver'" formControlName="driverRequirment" [items]="driverRequirments">
+        </bd-dropdown>
+        <bd-dropdown [labelText]="'Pover unit'" formControlName="powerUnitType" [items]="powerUnitTypes">
+        </bd-dropdown>
+        <bd-dropdown [labelText]="'Trailer'" formControlName="trailerType" [items]="trailerTypes">
+        </bd-dropdown>
+        <bd-textarea
+        formControlName="specialRequirment"
+         [labelText]="'Special Requirements'">
+        </bd-textarea>
+      </bd-form-section>
   </div>
 </form>
 </div>
