--- a/src/app/forms/address-form/address-form.component.scss
+++ b/src/app/forms/address-form/address-form.component.scss
@@ -19,3 +19,18 @@
 .bottom-border {
 	border-bottom: $border;
 }
+
+.item-wrapper {
+	display: flex;
+	height: 100%;
+	padding: 0 17px;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	overflow: hidden;
+
+	.text {
+		color: #000;
+		font-size: 14px;
+	}
+}
