--- a/src/app/forms/address-form/address-form.component.scss
+++ b/src/app/forms/address-form/address-form.component.scss
@@ -22,15 +22,15 @@
 
 .item-wrapper {
 	display: flex;
+	overflow: hidden;
 	height: 100%;
 	padding: 0 17px;
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
-	overflow: hidden;
 
 	.text {
-		color: #000;
+		color: $black;
 		font-size: 14px;
 	}
 }
