--- a/src/app/forms/address-form/address-form.component.html
+++ b/src/app/forms/address-form/address-form.component.html
@@ -9,8 +9,8 @@
 <bd-typeahead
 	formControlName="streetAddress"
 	placeholder="Street address 1"
-  [source]="placeSource"
-  [(value)]="placeQuery"
+  [source]="_placeSource"
+  [(value)]="_placeQuery"
   [itemTemplate]="customItemTemplate"
 	[deleteButtonHidden]="true"
   (onSelect)="onPlaceSelect($event)"
@@ -33,8 +33,8 @@
 		</div>
 		<div class="right-side bottom-border">
 			<google-map
-				[location]="map.location"
-				[info]="map.labelText">
+				[location]="_map.location"
+				[info]="_map.labelText">
 			</google-map>
 		</div>
 	</div>
