FSPA-125 fix form integration with switch component, change dropdown/switch architecutre to work with selected filed

--- a/src/app/shared/components/bd-button-switch/bd-button-switch.component.html
+++ b/src/app/shared/components/bd-button-switch/bd-button-switch.component.html
@@ -5,10 +5,10 @@
   <div class="bd-buttons-container">
     <button
       *ngFor="let item; of:items; let i=index"
-      attr.value="{{item}}"
+      type='button'
       [class.active]="isActive(item)"
-      (click)="_handleItemClick($event)">
-        {{item}}
+      (click)="_handleItemClick($event, item)">
+        {{displayText(item)}}
     </button>
   </div>
 </div>
