--- a/src/app/shared/components/bd-form-switch/bd-form-switch.component.html
+++ b/src/app/shared/components/bd-form-switch/bd-form-switch.component.html
@@ -3,7 +3,8 @@
       *ngSwitchCase="true"
       [labelText]="labelText"
       [items]="items"
-      [selectedValue]="selectedValue">
+      [selectedValue]="selectedValue"
+      (onItemClick)="onItemClick($event)">
   </bd-button-switch>
   <bd-dropdown
       *ngSwitchCase="false"
@@ -13,6 +14,7 @@
       [dropdownFooterTemplate]="dropdownFooterTemplate"
       [dropdownItemTemplate]="dropdownItemTemplate"
       [items]="items"
-      [selectedValue]="selectedValue">
+      [selectedValue]="selectedValue"
+      (onItemClick)="onItemClick($event)">
   </bd-dropdown>
 </div>
