--- a/src/app/shared/components/bd-form-typeahead/bd-form-typeahead.component.html
+++ b/src/app/shared/components/bd-form-typeahead/bd-form-typeahead.component.html
@@ -21,6 +21,6 @@
       (typeaheadNoResults)="changeTypeaheadNoResults($event)"
       (typeaheadFooterClick)="onFooterClick()"
       [typeaheadOptionsLimit]="'5'">
-      <i bd-suffix *ngIf="!deleteButtonHidden" (click)="remove($event)" class="fa fa-minus-circle" aria-hidden="true"></i>
+      <i bd-suffix *ngIf="!removeButtonHidden" (click)="remove($event)" class="fa fa-minus-circle" aria-hidden="true"></i>
   </bd-input>
 </div>
