--- a/src/app/forms/customer-form/customer-form.component.html
+++ b/src/app/forms/customer-form/customer-form.component.html
@@ -1,5 +1,5 @@
 <bd-form-expand [expanded]="isFormExpanded" (changed)="onExpandChanged($event)" [viewMode]="viewMode">
-	<form [formGroup]="customerForm">
+	<form [formGroup]="customerForm" (ngSubmit)="onSubmit(customerForm.value)">
 		<bd-form-section [labelText]="'CUSTOMER > BASIC INFORMATION'" [isExpanded]='isFormExpanded'>
 			<bd-input [labelText]="'Company Name'" formControlName="name" *ngIf="isFormExpanded">
 			</bd-input>
@@ -28,13 +28,14 @@
 		</bd-form-section>
 		<div class="section btn-container" *ngIf="isEditMode">
 			<bd-button
-				type='default'
+				type="default"
 				(click)="onCancel()"
 				[text]="'Cancel'"
 				class="bd-button">
 			</bd-button>
 			<bd-button
-				type='primary'
+				type="submit"
+				color="primary"
 				class="bd-button"
 				(click)="onSubmit()"
 				[text]="'Add Customer'">
