--- a/src/app/shared/components/bd-form-typeahead/bd-form-typeahead.component.scss
+++ b/src/app/shared/components/bd-form-typeahead/bd-form-typeahead.component.scss
@@ -12,9 +12,9 @@
 			height: 49px;
 			border-bottom: $border;
 
-			&:last-child {
+			bd-form-button {
 				display: flex;
-				align-items: center;
+				height: 100%;
 				justify-content: center;
 			}
 
