FSPA-135 #comment added contacts service

--- a/src/app/forms/load-form/load-form.component.html
+++ b/src/app/forms/load-form/load-form.component.html
@@ -36,6 +36,8 @@
        </bd-typeahead>
      </bd-validator>
       <customer-form *ngIf='load.customer' [customer]='load.customer' [viewMode]="customerViewMode"> </customer-form>
+      <bd-dropdown [labelText]="'Contacts'">
+      </bd-dropdown>
   </div>
 </form>
 </div>
