fix deploy image show

--- a/src/app/navigation-bar/navigation-bar.component.scss
+++ b/src/app/navigation-bar/navigation-bar.component.scss
@@ -12,7 +12,7 @@ $tango: #e67517;
 }
 
 .icon {
-	mask:  url('../../assets/img/menu-icon.svg') no-repeat;
+	mask:  url('/assets/img/menu-icon.svg') no-repeat;
 }
 
 .logo-container {
