FSPA-138 #comment fixed UI Remarks

--- a/src/app/shared/components/bd-form-typeahead/bd-form-typeahead.component.html
+++ b/src/app/shared/components/bd-form-typeahead/bd-form-typeahead.component.html
@@ -12,6 +12,7 @@
       [typeahead]="source"
       [collapsibleInput]="true"
       [labelText]="labelText"
+      placeholder="{{placeholder}}"
       [typeaheadItemTemplate]="itemTemplate"
       [typeaheadFooterTemplate]="footerButtonText == '' ? null : footerTemplate"
       [typeaheadLoaderTemplate]="loaderTemplate"
