--- a/src/app/shared/components/bd-input/bd-input.component.html
+++ b/src/app/shared/components/bd-input/bd-input.component.html
@@ -49,7 +49,7 @@
               (focus)="_handleFocus($event)"
               (change)="_handleChange($event)"
               (blur)="_handleBlur($event)"
-              placeholder="placeholder"
+              placeholder="{{placeholder}}"
               [id]="inputId"
             ></textarea>
           </div>
