--- a/src/app/forms/address-form/address-form.component.html
+++ b/src/app/forms/address-form/address-form.component.html
@@ -20,7 +20,7 @@
 		<div class="left-side right-border">
 		<bd-input placeholder="Street address 2" (valueChange)="onRemoveMap($event)" formControlName="secondStreetAddress">
 		</bd-input>
-			<bd-input formControlName="city" (valueChange)="onRemoveMap($event)">
+			<bd-input formControlName="city" placeholder="City" (valueChange)="onRemoveMap($event)">
 			</bd-input>
 			<div class="section">
 				<div class="right-border">
@@ -40,15 +40,15 @@
 	</div>
 	<div class="section">
 			<div class="left-side right-border">
-				<bd-input [labelText]="'phone'" formControlName="phone">
+				<bd-input [labelText]="'Phone'" formControlName="phone">
 				</bd-input>
-				<bd-input  [labelText]="'fax'" *ngIf='isExpanded' placeholder="fax" formControlName="fax">
+				<bd-input  [labelText]="'Fax'" *ngIf='isExpanded' formControlName="fax">
 				</bd-input>
 			</div>
 			<div class="right-side">
-				<bd-input formControlName="phoneExtension">
+				<bd-input placeholder="Extension" formControlName="phoneExtension">
 				</bd-input>
-				<bd-input formControlName="faxExtension" *ngIf='isExpanded'>
+				<bd-input placeholder="Extension" formControlName="faxExtension" *ngIf='isExpanded'>
 				</bd-input>
 			</div>
 	</div>
