FSPA-112 #comment inmplement Form view style

--- a/src/app/forms/customer-form/customer-form.component.html
+++ b/src/app/forms/customer-form/customer-form.component.html
@@ -1,29 +1,28 @@
-<bd-form-expand [expanded]="isFormExpanded" (changed)="onExpandChanged($event)" [viewMode]="viewMode">
-	<form [formGroup]="customerForm" (ngSubmit)="onSubmit(customerForm.value)">
+<bd-form-expand [expanded]="isFormExpanded" (changed)="onExpandChanged($event)" [viewMode]="viewMode" [ngClass]="formViewMode">
+	<form [formGroup]="customerForm" (ngSubmit)="onSubmit(customerForm.value)" [ngClass]="formViewMode">
 		<bd-form-section [labelText]="'CUSTOMER > BASIC INFORMATION'" [isExpanded]='isFormExpanded'>
-			<bd-input [labelText]="'Company Name'" formControlName="name" *ngIf="isFormExpanded">
+			<bd-input class="bd-form-control" [labelText]="'Company Name'" formControlName="name" *ngIf="isFormExpanded">
 			</bd-input>
-			<bd-dropdown [labelText]="'Customer type'" formControlName="customerType" [items]="customerTypes">
+			<bd-dropdown class="bd-form-control" [labelText]="'Customer type'" formControlName="customerType" [items]="customerTypes">
 			</bd-dropdown>
-			<bd-form-switch [labelText]="'Status'" [enableButtonSwitch]="isEditMode" formControlName="status" [items]="customerStatuses">
+			<bd-form-switch class="bd-form-control" [labelText]="'Status'" [enableButtonSwitch]="isEditMode" formControlName="status" [items]="customerStatuses">
 			</bd-form-switch>
 			<bd-validator [component]="customerForm.controls.mc" [errorDefs]="{required: 'MC# is required'}">
-				<bd-input [labelText]="'MC #'" formControlName="mc">
+				<bd-input class="bd-form-control" [labelText]="'MC #'" formControlName="mc">
 				</bd-input>
 			</bd-validator>
-			<bd-input [labelText]="'Tax ID (W9)'" formControlName="taxId" *ngIf="isFormExpanded">
+			<bd-input class="bd-form-control" [labelText]="'Tax ID (W9)'" formControlName="taxId" *ngIf="isFormExpanded">
 			</bd-input>
 		</bd-form-section>
 		<bd-form-section [labelText]="'CUSTOMER > ADDRESS'" [isExpanded]='isFormExpanded'>
-			<address-form [group]='customerForm.controls.address' [isExpanded]="isFormExpanded" [address]='customer.address'></address-form>
-			<bd-input [labelText]="'Email'" formControlName="email" *ngIf='isExpanded'>
+			<address-form [group]='customerForm.controls.address' [isExpanded]="isFormExpanded" [address]='customer.address' [viewMode]="viewMode"></address-form>
+			<bd-input class="bd-form-control" [labelText]="'Email'" formControlName="email" *ngIf='isExpanded'>
 			</bd-input>
 		</bd-form-section>
 		<bd-form-section [labelText]="'CUSTOMER > BILLING'" *ngIf='isExpanded' [isExpanded]="isFormExpanded">
 		 <label class="same-as-company-label"><input type="checkbox" (change)="sameAsCompanyChange($event)"><span>Same as Company Address</span></label>
 		 <address-form [group]='customerForm.controls.billingAddresses' [address]='customer.billingAddresses'></address-form>
-		 <bd-textarea
-		  [labelText]="'Notes'">
+		 <bd-textarea class="bd-form-control" [labelText]="'Notes'">
 		 </bd-textarea>
 		</bd-form-section>
 		<div class="section btn-container" *ngIf="isEditMode">
