--- a/src/app/forms/customer-form/customer-form.component.scss
+++ b/src/app/forms/customer-form/customer-form.component.scss
@@ -1,4 +1,5 @@
 @import '../../../assets/styles/variables';
+@import '../../../assets/styles/form-control';
 
 .bd-button {
 	width: calc(50% - 3px);
