--- a/src/app/forms/load-form/load-form.component.html
+++ b/src/app/forms/load-form/load-form.component.html
@@ -16,13 +16,14 @@
         </div>
       </div>
   </template>
-<form [formGroup]="loadForm">
+<form [formGroup]="loadForm" [ngClass]="formViewMode">
   <div class="bd-form">
     <div class="bd-form-title">
       Customer
     </div>
     <bd-validator [component]="loadForm.controls.customer" [errorDefs]="{required: 'Customer is required'}">
       <bd-typeahead
+         class="bd-form-control"
          formControlName="customer"
          [labelText]="'Name or MC#'"
          [footerButtonText]="'Add New Customer'"
@@ -39,12 +40,13 @@
       <bd-form-section>
         <bd-form-switch [labelText]="'Driver'" [enableButtonSwitch]="isEditMode" formControlName="driverRequirment" [items]="driverRequirmentsNames">
         </bd-form-switch>
-        <bd-dropdown [labelText]="'Pover unit'" formControlName="powerUnitType" [items]="powerUnitTypesNames">
+        <bd-dropdown class="bd-form-control" [labelText]="'Pover unit'" formControlName="powerUnitType" [items]="powerUnitTypesNames">
         </bd-dropdown>
-        <bd-dropdown [labelText]="'Trailer'" formControlName="trailerType" [items]="trailerTypesNames">
+        <bd-dropdown class="bd-form-control" [labelText]="'Trailer'" formControlName="trailerType" [items]="trailerTypesNames">
         </bd-dropdown>
         <bd-textarea
-        formControlName="specialRequirment"
+          class="bd-form-control"
+          formControlName="specialRequirment"
          [labelText]="'Special Requirements'">
         </bd-textarea>
       </bd-form-section>
