--- a/src/app/shared/components/bd-form-switch/bd-form-switch.component.html
+++ b/src/app/shared/components/bd-form-switch/bd-form-switch.component.html
@@ -1,4 +1,4 @@
-<div [ngSwitch]="enableButtonSwitch">
+<div class="wrapper" [ngSwitch]="enableButtonSwitch">
   <bd-button-switch
       *ngSwitchCase="true"
       [labelText]="labelText"
