--- a/src/app/forms/address-form/address-form.component.html
+++ b/src/app/forms/address-form/address-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="addressForm">
+<form [formGroup]="addressForm" [ngClass]="formViewMode">
 	<template #customItemTemplate let-model="item" let-index="index">
     <div class="item-wrapper">
 			<div class="text">
@@ -7,6 +7,7 @@
     </div>
 </template>
 <bd-typeahead
+	class="bd-form-control"
 	formControlName="streetAddress"
 	placeholder="Street address 1"
   [source]="_placeSource"
@@ -18,16 +19,28 @@
 </bd-typeahead>
 	<div class="section">
 		<div class="left-side right-border">
-		<bd-input placeholder="Street address 2" (valueChange)="onRemoveMap($event)" formControlName="secondStreetAddress">
+		<bd-input
+			class="bd-form-control"
+			placeholder="Street address 2"
+			(valueChange)="onRemoveMap($event)"
+			formControlName="secondStreetAddress">
 		</bd-input>
-			<bd-input formControlName="city" placeholder="City" (valueChange)="onRemoveMap($event)">
+			<bd-input class="bd-form-control" formControlName="city" placeholder="City" (valueChange)="onRemoveMap($event)">
 			</bd-input>
 			<div class="section">
 				<div class="right-border">
-					<bd-input placeholder="State" formControlName="state" (valueChange)="onRemoveMap($event)">
+					<bd-input
+					class="bd-form-control"
+					placeholder="State"
+					formControlName="state"
+					(valueChange)="onRemoveMap($event)">
 					</bd-input>
 				</div>
-				<bd-input placeholder="Zip" (valueChange)="onRemoveMap($event)" formControlName="zip">
+				<bd-input
+					class="bd-form-control"
+					placeholder="Zip"
+					(valueChange)="onRemoveMap($event)"
+					formControlName="zip">
 				</bd-input>
 			</div>
 		</div>
@@ -40,15 +53,15 @@
 	</div>
 	<div class="section">
 			<div class="left-side right-border">
-				<bd-input [labelText]="'Phone'" formControlName="phone">
+				<bd-input class="bd-form-control" [labelText]="'Phone'" formControlName="phone">
 				</bd-input>
-				<bd-input  [labelText]="'Fax'" *ngIf='isExpanded' formControlName="fax">
+				<bd-input class="bd-form-control" [labelText]="'Fax'" *ngIf='isExpanded' formControlName="fax">
 				</bd-input>
 			</div>
 			<div class="right-side">
-				<bd-input placeholder="Extension" formControlName="phoneExtension">
+				<bd-input class="bd-form-control" placeholder="Extension" formControlName="phoneExtension">
 				</bd-input>
-				<bd-input placeholder="Extension" formControlName="faxExtension" *ngIf='isExpanded'>
+				<bd-input class="bd-form-control" placeholder="Extension" formControlName="faxExtension" *ngIf='isExpanded'>
 				</bd-input>
 			</div>
 	</div>
