--- a/src/app/shared/components/bd-dropdown/bd-dropdown.component.scss
+++ b/src/app/shared/components/bd-dropdown/bd-dropdown.component.scss
@@ -1,12 +1,13 @@
 @import '../../../../assets/styles/variables';
 
 .bd-dropdown-container {
+	background-color: inherit;
 
 	.bd-dropdown-wrapper {
 		display: flex;
 		width: 100%;
 		height: $form-control-height;
-		background: $white;
+		background-color: inherit;
 		border-bottom: $border;
 		outline: 0;
 		align-items: center;
