FSPA-132 make validator component work with input on touch actions

--- a/src/app/shared/components/bd-input/bd-input.component.html
+++ b/src/app/shared/components/bd-input/bd-input.component.html
@@ -30,6 +30,7 @@
               (focus)="_handleFocus($event)"
               placeholder="{{placeholder}}"
               (change)="_handleChange($event)"
+              (keydown)="_handleKeyDown($event)"
               (blur)="_handleBlur($event)"
               [attr.name]="name"
               [type]="type"
@@ -48,6 +49,7 @@
               class="bd-input-element {{_invalidClass}}"
               (focus)="_handleFocus($event)"
               (change)="_handleChange($event)"
+              (keydown)="_handleKeyDown($event)"
               (blur)="_handleBlur($event)"
               placeholder="placeholder"
               [id]="inputId"
