--- a/src/app/forms/load-form/load-form.component.html
+++ b/src/app/forms/load-form/load-form.component.html
@@ -31,11 +31,11 @@
          [(value)]="customerQuery"
          [itemTemplate]="customItemTemplate"
          (onSelect)="onCustomerSelect($event)"
-         (onFooterButtonClick)="onAddCustomer()"
+         (onFooterButtonClick)="onAddNewCustomer()"
          [optionField]="'name'">
        </bd-typeahead>
      </bd-validator>
-      <customer-form *ngIf='load.customer' [customer]='load.customer' [viewMode]="customerViewMode"> </customer-form>
+      <customer-form *ngIf='selectedCustomer' [customer]='selectedCustomer' (save)="onCustomerSave($event)" (cancel)="onCustomerEditCancel()" [viewMode]="customerViewMode"> </customer-form>
   </div>
 </form>
 </div>
