FSPA-112 add styles for bd-form switch

--- a/src/app/shared/components/bd-form-switch/bd-form-switch.component.html
+++ b/src/app/shared/components/bd-form-switch/bd-form-switch.component.html
@@ -15,6 +15,7 @@
       [dropdownItemTemplate]="dropdownItemTemplate"
       [items]="items"
       [selectedValue]="selectedValue"
-      (onItemClick)="onItemClick($event)">
+      (onItemClick)="onItemClick($event)"
+      (focusChange)="onDropdownFocusChange($event)">
   </bd-dropdown>
 </div>
