--- a/src/app/forms/customer-form/customer-form.component.html
+++ b/src/app/forms/customer-form/customer-form.component.html
@@ -1,5 +1,5 @@
-<bd-form-expand [expanded]="isFormExpanded" (changed)="onExpandChanged($event)" [viewMode]="viewMode" [ngClass]="formViewMode">
-	<form [formGroup]="customerForm" novalidate (ngSubmit)="submit(customerForm.value, customerForm.valid)" [ngClass]="formViewMode">
+<bd-form-expand [expanded]="isFormExpanded" (changed)="onExpandChanged($event)" [viewMode]="viewMode" [class.edit]="isEditMode" [class.view]="!isEditMode">
+	<form [formGroup]="customerForm" novalidate (ngSubmit)="submit(customerForm.value, customerForm.valid)" [class.edit]="isEditMode" [class.view]="!isEditMode">
 		<bd-form-section [labelText]="'CUSTOMER > BASIC INFORMATION'" [isExpanded]='isFormExpanded'>
 			<bd-input class="bd-form-control" [labelText]="'Company Name'" formControlName="name" *ngIf="isFormExpanded">
 			</bd-input>
@@ -20,8 +20,11 @@
 			</bd-input>
 		</bd-form-section>
 		<bd-form-section [labelText]="'CUSTOMER > BILLING'" *ngIf='isFormExpanded' [isExpanded]="isFormExpanded">
-		 <label class="same-as-company-label"><input type="checkbox" (change)="sameAsCompanyChange($event)"><span>Same as Company Address</span></label>
-		 <address-form [group]='customerForm.controls.billingAddresses' [isExpanded]="isFormExpanded" [address]='customer.billingAddresses'></address-form>
+		 <label class="same-as-company-label bd-form-control">
+			 <input type="checkbox" (change)="sameAsCompanyChange($event)">
+			 <span>Same as Company Address</span>
+		 </label>
+		 <address-form [group]='customerForm.controls.billingAddresses' [isExpanded]="isFormExpanded" [address]='customer.billingAddresses' [viewMode]="viewMode"></address-form>
 		 <bd-textarea class="bd-form-control" [labelText]="'Notes'">
 		 </bd-textarea>
 		</bd-form-section>
